{
  "version": 4,
  "terraform_version": "1.10.1",
  "serial": 541,
  "lineage": "1ef202d1-797d-89cd-440a-2e643ddfe516",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03629be22cbde9be5",
            "association_id": "eipassoc-0540f331b3f2a5ee5",
            "domain": "vpc",
            "id": "eipalloc-03629be22cbde9be5",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0b5e50b8ed65fc331",
            "private_dns": "ip-10-0-1-139.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.139",
            "public_dns": "ec2-57-182-98-246.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "57.182.98.246",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "how-aws-alb-run-eip-for-natgw-1a"
            },
            "tags_all": {
              "Name": "how-aws-alb-run-eip-for-natgw-1a",
              "application": "how-aws-alb-run"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:438344051408:internet-gateway/igw-01f1cdb1d5e779836",
            "id": "igw-01f1cdb1d5e779836",
            "owner_id": "438344051408",
            "tags": {
              "Name": "how-aws-alb-run-igw"
            },
            "tags_all": {
              "Name": "how-aws-alb-run-igw",
              "application": "how-aws-alb-run"
            },
            "vpc_id": "vpc-0693ad7035f193c24"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:438344051408:loadbalancer/app/how-aws-alb-run-alb/ecaa669d7ef5765d",
            "arn_suffix": "app/how-aws-alb-run-alb/ecaa669d7ef5765d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "how-aws-alb-run-alb-1262067562.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:438344051408:loadbalancer/app/how-aws-alb-run-alb/ecaa669d7ef5765d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "how-aws-alb-run-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0dcd686a44bd4887e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0110b0c00a825e622"
              },
              {
                "subnet_id": "subnet-0465d77cd37ffbec8"
              }
            ],
            "subnets": [
              "subnet-0110b0c00a825e622",
              "subnet-0465d77cd37ffbec8"
            ],
            "tags_all": {
              "application": "how-aws-alb-run"
            },
            "vpc_id": "vpc-0693ad7035f193c24",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_security_group.main",
            "aws_subnet.public-1a",
            "aws_subnet.public-1c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:438344051408:listener/app/how-aws-alb-run-alb/ecaa669d7ef5765d/3cedda4444dfa0cb",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:438344051408:certificate/1a957af4-b4fa-4a72-ae4e-9823408b873d",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "503 Service Temporarily Unavailable",
                    "status_code": "503"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:438344051408:listener/app/how-aws-alb-run-alb/ecaa669d7ef5765d/3cedda4444dfa0cb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:438344051408:loadbalancer/app/how-aws-alb-run-alb/ecaa669d7ef5765d",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {
              "application": "how-aws-alb-run"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_security_group.main",
            "aws_subnet.public-1a",
            "aws_subnet.public-1c",
            "aws_vpc.main",
            "data.aws_acm_certificate.host_domain_wc_acm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:438344051408:listener/app/how-aws-alb-run-alb/ecaa669d7ef5765d/c94b62d69c2e6128",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:438344051408:listener/app/how-aws-alb-run-alb/ecaa669d7ef5765d/c94b62d69c2e6128",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:438344051408:loadbalancer/app/how-aws-alb-run-alb/ecaa669d7ef5765d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "application": "how-aws-alb-run"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_security_group.main",
            "aws_subnet.public-1a",
            "aws_subnet.public-1c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03629be22cbde9be5",
            "association_id": "eipassoc-0540f331b3f2a5ee5",
            "connectivity_type": "public",
            "id": "nat-08a9452bf82953414",
            "network_interface_id": "eni-0b5e50b8ed65fc331",
            "private_ip": "10.0.1.139",
            "public_ip": "57.182.98.246",
            "subnet_id": "subnet-0110b0c00a825e622",
            "tags": {
              "Name": "how-aws-alb-run-natgw-1a"
            },
            "tags_all": {
              "Name": "how-aws-alb-run-natgw-1a",
              "application": "how-aws-alb-run"
            }
          },
          "dependencies": [
            "aws_eip.nat-1a",
            "aws_subnet.public-1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:438344051408:route-table/rtb-0359a5b8c1100bf3a",
            "id": "rtb-0359a5b8c1100bf3a",
            "owner_id": "438344051408",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08a9452bf82953414",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "how-aws-alb-run-private-rtb"
            },
            "tags_all": {
              "Name": "how-aws-alb-run-private-rtb",
              "application": "how-aws-alb-run"
            },
            "timeouts": null,
            "vpc_id": "vpc-0693ad7035f193c24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-1a",
            "aws_nat_gateway.nat-1a",
            "aws_subnet.public-1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:438344051408:route-table/rtb-08b1352ccb8fdaa07",
            "id": "rtb-08b1352ccb8fdaa07",
            "owner_id": "438344051408",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01f1cdb1d5e779836",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "how-aws-alb-run-public-rtb"
            },
            "tags_all": {
              "Name": "how-aws-alb-run-public-rtb",
              "application": "how-aws-alb-run"
            },
            "timeouts": null,
            "vpc_id": "vpc-0693ad7035f193c24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-1a-to-natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067caeefd89963f8c",
            "route_table_id": "rtb-0359a5b8c1100bf3a",
            "subnet_id": "subnet-008d02606537acc7c"
          },
          "dependencies": [
            "aws_eip.nat-1a",
            "aws_nat_gateway.nat-1a",
            "aws_route_table.private",
            "aws_subnet.private-1a",
            "aws_subnet.public-1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-1c-to-natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01497e9085e67afb5",
            "route_table_id": "rtb-0359a5b8c1100bf3a",
            "subnet_id": "subnet-0d6dfafab81e3edbc"
          },
          "dependencies": [
            "aws_eip.nat-1a",
            "aws_nat_gateway.nat-1a",
            "aws_route_table.private",
            "aws_subnet.private-1c",
            "aws_subnet.public-1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-1a-to-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098f2938d0f56aa90",
            "route_table_id": "rtb-08b1352ccb8fdaa07",
            "subnet_id": "subnet-0110b0c00a825e622"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public-1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-1c-to-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0086653f3d3f1f304",
            "route_table_id": "rtb-08b1352ccb8fdaa07",
            "subnet_id": "subnet-0465d77cd37ffbec8"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public-1c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:438344051408:security-group/sg-0bdf0dbbd9e46a083",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bdf0dbbd9e46a083",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0dcd686a44bd4887e"
                ],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "how-aws-alb-run-app-sg",
            "name_prefix": "",
            "owner_id": "438344051408",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "how-aws-alb-run-app-sg"
            },
            "tags_all": {
              "Name": "how-aws-alb-run-app-sg",
              "application": "how-aws-alb-run"
            },
            "timeouts": null,
            "vpc_id": "vpc-0693ad7035f193c24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:438344051408:security-group/sg-0dcd686a44bd4887e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dcd686a44bd4887e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "how-aws-alb-run-alb-sg",
            "name_prefix": "",
            "owner_id": "438344051408",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "how-aws-alb-run-alb-sg"
            },
            "tags_all": {
              "Name": "how-aws-alb-run-alb-sg",
              "application": "how-aws-alb-run"
            },
            "timeouts": null,
            "vpc_id": "vpc-0693ad7035f193c24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:438344051408:security-group/sg-0c6d2a916d71cd0ed",
            "description": "how-aws-alb-run-rds-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c6d2a916d71cd0ed",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "how-aws-alb-run-rds-sg",
            "name_prefix": "",
            "owner_id": "438344051408",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "how-aws-alb-run-database-sg"
            },
            "tags_all": {
              "Name": "how-aws-alb-run-database-sg",
              "application": "how-aws-alb-run"
            },
            "timeouts": null,
            "vpc_id": "vpc-0693ad7035f193c24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-3442820085",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0dcd686a44bd4887e",
            "security_group_rule_id": "sgr-0bb096c03946ad712",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-540912149",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0dcd686a44bd4887e",
            "security_group_rule_id": "sgr-0a51e093390164262",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-2076122688",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0dcd686a44bd4887e",
            "security_group_rule_id": "sgr-06869e76481f18dca",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 0,
            "id": "sgrule-2561172599",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0bdf0dbbd9e46a083",
            "security_group_rule_id": "sgr-0ed7228e5d26dbcf3",
            "self": false,
            "source_security_group_id": "sg-0dcd686a44bd4887e",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app",
            "aws_security_group.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_from_other_environments",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 0,
            "id": "sgrule-2691959191",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0bdf0dbbd9e46a083",
            "security_group_rule_id": "sgr-0e314b46e87d8d04a",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_to_any",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1906199838",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0bdf0dbbd9e46a083",
            "security_group_rule_id": "sgr-0dd6e08015663639f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_sg_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "",
            "from_port": 5432,
            "id": "sgrule-973078282",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c6d2a916d71cd0ed",
            "security_group_rule_id": "sgr-01fe6882a6f7b3d6a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "to_port"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "from_port"
              }
            ]
          ],
          "dependencies": [
            "aws_security_group.rds_sg",
            "aws_vpc.main",
            "data.aws_ssm_parameter.rds_DB_PORT"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:438344051408:subnet/subnet-008d02606537acc7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008d02606537acc7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "438344051408",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "how-aws-alb-run-private-1a"
            },
            "tags_all": {
              "Name": "how-aws-alb-run-private-1a",
              "application": "how-aws-alb-run"
            },
            "vpc_id": "vpc-0693ad7035f193c24"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:438344051408:subnet/subnet-0d6dfafab81e3edbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6dfafab81e3edbc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "438344051408",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "how-aws-alb-run-private-1c"
            },
            "tags_all": {
              "Name": "how-aws-alb-run-private-1c",
              "application": "how-aws-alb-run"
            },
            "vpc_id": "vpc-0693ad7035f193c24"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:438344051408:subnet/subnet-0110b0c00a825e622",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0110b0c00a825e622",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "438344051408",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "how-aws-alb-run-public-1a"
            },
            "tags_all": {
              "Name": "how-aws-alb-run-public-1a",
              "application": "how-aws-alb-run"
            },
            "vpc_id": "vpc-0693ad7035f193c24"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:438344051408:subnet/subnet-0465d77cd37ffbec8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0465d77cd37ffbec8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "438344051408",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "how-aws-alb-run-public-1c"
            },
            "tags_all": {
              "Name": "how-aws-alb-run-public-1c",
              "application": "how-aws-alb-run"
            },
            "vpc_id": "vpc-0693ad7035f193c24"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:438344051408:vpc/vpc-0693ad7035f193c24",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09313fc95cf042454",
            "default_route_table_id": "rtb-09c6389e60efac006",
            "default_security_group_id": "sg-07236569145d61ed6",
            "dhcp_options_id": "dopt-00e3c3635fdbf8404",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0693ad7035f193c24",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09c6389e60efac006",
            "owner_id": "438344051408",
            "tags": {
              "Name": "how-aws-alb-run-vpc"
            },
            "tags_all": {
              "Name": "how-aws-alb-run-vpc",
              "application": "how-aws-alb-run"
            }
          }
        }
      ]
    }
  ]
}